Upload improvements